--- a/index.html
+++ b/index.html
@@ -1,103 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>WhatsApp Bot Pair</title>
-
-<style>
-* {
-  box-sizing: border-box;
-}
-body {
-  margin: 0;
-  height: 100vh;
-  font-family: "Segoe UI", sans-serif;
-  background: linear-gradient(135deg, #25D366, #075E54);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.card {
-  background: white;
-  width: 360px;
-  padding: 30px;
-  border-radius: 20px;
-  box-shadow: 0 25px 45px rgba(0,0,0,.25);
-  text-align: center;
-}
-h1 {
-  margin: 0;
-}
-p {
-  color: #555;
-}
-input {
-  width: 100%;
-  padding: 14px;
-  margin-top: 15px;
-  border-radius: 10px;
-  border: 1px solid #ccc;
-  font-size: 16px;
-}
-button {
-  width: 100%;
-  padding: 14px;
-  margin-top: 15px;
-  border: none;
-  border-radius: 10px;
-  background: #25D366;
-  color: white;
-  font-size: 16px;
-  cursor: pointer;
-}
-button:hover {
-  opacity: .9;
-}
-#code {
-  margin-top: 25px;
-  font-size: 30px;
-  letter-spacing: 6px;
-  color: #075E54;
-}
-.info {
-  font-size: 12px;
-  color: #777;
-  margin-top: 15px;
-}
-</style>
+  <title>WhatsApp Pair Code</title>
+  <style>
+    body { background:#020617;color:#fff;font-family:Arial;text-align:center;padding-top:60px }
+    input,button { padding:12px;font-size:16px;margin:6px;border-radius:6px;border:none }
+    button { background:#22c55e }
+  </style>
 </head>
-
 <body>
-  <div class="card">
-    <h1>🤖 WhatsApp Bot</h1>
-    <p>Pair your WhatsApp account</p>
 
-    <input id="phone" placeholder="CountryCode + Number" />
-    <button onclick="pair()">Get Pair Code</button>
-
-    <div id="code"></div>
-
-    <div class="info">
-      WhatsApp → Linked Devices → Link with phone number
-    </div>
-  </div>
+<h1>WhatsApp Pair Code Login</h1>
+<input id="num" placeholder="263XXXXXXXXX">
+<br>
+<button onclick="pair()">Get Pair Code</button>
+<h2 id="out"></h2>
 
 <script>
-async function pair() {
-  const phone = document.getElementById("phone").value.trim()
-  if (!phone) return alert("Enter phone number")
-
-  document.getElementById("code").innerText = "⏳"
-
-  const res = await fetch("/pair", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ phone })
-  })
-
-  const data = await res.json()
-  document.getElementById("code").innerText = data.code || "Error"
+async function pair(){
+  const n = document.getElementById("num").value;
+  const r = await fetch("/pair",{
+    method:"POST",
+    headers:{ "Content-Type":"application/json" },
+    body:JSON.stringify({ number:n })
+  });
+  const d = await r.json();
+  document.getElementById("out").innerText = d.pairCode || d.error;
 }
 </script>
+
 </body>
 </html>
